--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"lucide-react": "^0.460.0",
 		"mongoose": "^8.8.3",
 		"next": "14.2.4",
+		"next-auth": "^4.24.10",
 		"next-themes": "^0.2.1",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
