--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"axios": "^1.7.8",
 		"bcrypt": "^5.1.1",
 		"clsx": "2.1.1",
+		"date-fns": "^4.1.0",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"jsonwebtoken": "^9.0.2",
